@@ -1,5 +1,9 @@
 Changes to to 0.5.34
+	* added cellwidth percentage as well to wvHtml.xml to make the cells the
+	same ratio width in html as in the original word.
+	* changed Dk Colors to Dark Colors in wvHtml.xml to get the right colors
 ALL TODO
+	* add two options for table width, i.e. tableabswidth & tablerelwidth
 	* test rowspan lots and lots on examples.
 	* careful colspan tests.
 	
